# dict-vocab

./: .gitignore  README.md  pyproject.toml  uv-installer.sh
src/dict_vocab/: mdict_indexer.py
src/dict_vocab/api/: main.py
src/dict_vocab/api/static/: index.html
src/dict_vocab/indexer/: mdict_indexer.py
src/dict_vocab/readmdict/: __init__.py
tests/: test_api.py  test_mdict_indexer.py  test_mdict_indexer_integration.py
